[gd_scene load_steps=16 format=2]

[ext_resource path="res://Draw Scenes/Grandma.png" type="Texture" id=1]
[ext_resource path="res://Draw Scene Parts/Grandma/Clock.png" type="Texture" id=2]
[ext_resource path="res://Draw Scene Parts/Grandma/Background.png" type="Texture" id=3]
[ext_resource path="res://Draw Scene Parts/Grandma/WindowClosed.png" type="Texture" id=4]
[ext_resource path="res://Draw Scene Parts/Grandma/Grandma_monalisa.png" type="Texture" id=5]
[ext_resource path="res://Draw Scene Parts/Grandma/Grandma_outline.png" type="Texture" id=6]
[ext_resource path="res://Draw Scene Parts/Grandma/Notes.png" type="Texture" id=7]
[ext_resource path="res://Draw Scene Parts/Grandma/Phone.png" type="Texture" id=8]
[ext_resource path="res://Draw Scene Parts/Grandma/Mints.png" type="Texture" id=9]
[ext_resource path="res://Draw Scene Parts/Grandma/WindowOpen.png" type="Texture" id=10]
[ext_resource path="res://Draw Scene Parts/Grandma/SpeechBubble.png" type="Texture" id=11]
[ext_resource path="res://Draw Scene Parts/Grandma/Noise_Small.png" type="Texture" id=12]
[ext_resource path="res://Draw Scene Parts/Grandma/Noise_Large.png" type="Texture" id=13]
[ext_resource path="res://Draw Scene Parts/Grandma/MissKids.png" type="Texture" id=14]
[ext_resource path="res://Grandma.gd" type="Script" id=15]

[node name="GrandmaTop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 15 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Placement" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="GrandmaOutline" type="TextureRect" parent="."]
margin_left = 658.0
margin_top = 178.0
margin_right = 841.0
margin_bottom = 483.0
texture = ExtResource( 6 )

[node name="GrandmaMonalisa" type="TextureRect" parent="."]
margin_left = 752.0
margin_top = 178.0
margin_right = 809.0
margin_bottom = 252.0
texture = ExtResource( 5 )

[node name="WindowOpen" type="TextureButton" parent="."]
margin_left = 365.0
margin_top = 200.0
margin_right = 491.0
margin_bottom = 338.0
texture_normal = ExtResource( 10 )

[node name="NoiseLarge" type="TextureRect" parent="."]
margin_left = 352.0
margin_top = 334.0
margin_right = 471.0
margin_bottom = 363.0
texture = ExtResource( 13 )

[node name="WindowClosed" type="TextureRect" parent="."]
visible = false
margin_left = 365.0
margin_top = 200.0
margin_right = 491.0
margin_bottom = 338.0
texture = ExtResource( 4 )

[node name="NoiseSmall" type="TextureRect" parent="."]
visible = false
margin_left = 364.0
margin_top = 328.0
margin_right = 489.0
margin_bottom = 347.0
texture = ExtResource( 12 )

[node name="Notes" type="TextureRect" parent="."]
visible = false
margin_left = 236.0
margin_top = 283.0
margin_right = 393.0
margin_bottom = 341.0
texture = ExtResource( 7 )

[node name="ClockButton" type="TextureButton" parent="."]
anchor_left = 0.577
anchor_top = 0.195
anchor_right = 0.664
anchor_bottom = 0.337
margin_left = 0.151978
margin_right = 0.0639648
margin_bottom = -0.200012
texture_normal = ExtResource( 2 )

[node name="GrammophoneButton" type="TextureButton" parent="."]
margin_left = 121.0
margin_top = 272.0
margin_right = 267.0
margin_bottom = 464.0

[node name="Phone" type="TextureButton" parent="."]
margin_left = 916.0
margin_top = 335.0
margin_right = 980.0
margin_bottom = 390.0
texture_normal = ExtResource( 8 )

[node name="Mints" type="TextureButton" parent="."]
margin_left = 989.0
margin_top = 372.0
margin_right = 1010.0
margin_bottom = 396.0
texture_normal = ExtResource( 9 )

[node name="SpeechBubble" type="TextureRect" parent="."]
visible = false
margin_left = 786.0
margin_top = 75.0
margin_right = 1024.0
margin_bottom = 241.0
texture = ExtResource( 11 )

[node name="MissGrandkids" type="TextureRect" parent="."]
margin_left = 786.0
margin_top = 75.0
margin_right = 1020.0
margin_bottom = 241.0
texture = ExtResource( 14 )

[connection signal="pressed" from="WindowOpen" to="." method="_on_WindowOpen_pressed"]
[connection signal="pressed" from="ClockButton" to="." method="_on_ClockButton_pressed"]
[connection signal="pressed" from="GrammophoneButton" to="." method="_on_GrammophoneButton_pressed"]
